src/main/resources/static/scss/sections/_groupings.scss
/* In admin, memberships, and groupings. */
.manage-groupings {
    tr {
        td { /* Manage Memberships */
            padding: 0;
        }
    }

    td {
        span {
            &.path {
                display: inline-block;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
                width: calc(100% - 40px);
            }
        }

        &:last-child {
            max-width: 220px;
        }

        &:first-child {
            i {
                flex-basis: 20px;
                margin-right: 8px;
            }

            span {
                flex: 1;
            }
        }
    }
}

/* Style for the grouping path. */
.form-control-sm {
    height: 25px !important;
}

#selectall {
    margin-left: 0;
}

#groupingsContainer {
    display: none;
}

/* Groupings card */
.card {
    overflow: hidden;
    margin-top: 1rem;

    &.card-tab-content {
        .card-header {
            border-top-left-radius: 0;
            margin-top: 0;
        }
    }

    @include media-breakpoint(max-landscape-phone) {
        &-title {
            text-align: center;

            &-text {
                text-align: center;
            }
        }
    }
}

/* Basis and Exclude tab. */
.input-group.long { /* Members to remove section. */
    width: 35em;
}

.basis-column {
    width: 8%;
}

/* Add margin to "add" button in owners, exclude, and include. */
.add-margin {
    margin-left: 2px;
}

/**
* Allows responsive "add", "remove", and "import" buttons
* with smaller screens in owners, exclude, and include.
*/
#memSearch {
    padding-right: 4px;
    width: 50%;
}
@media (max-width: 768px) {
    #memBtns {
        position: relative;
        top: 50px;
    }
    #memSearch {
        position: absolute;
    }
    #pageBtn {
        position: relative;
        top: 5px;
    }
}

/**
 * Styling for selected grouping header.
 * Styles the grouping name and 'Return to Groupings'
 * button, so on mobile, the button sits on top of the
 * grouping name, eliminating whitespace.
 */
@include media-breakpoint(max-landscape-phone) {
    #selectedGroupHeader {
        display: table;
        margin: auto;
        width: 100%;
        padding: 0;
    }

    #groupNameCol {
        /* Makes the grouping name the footer of table */
        display: table-footer-group;
    }

    #returnToGroup {
        /* Makes the button the header of table */
        display: table-header-group;
    }
}

/* Exports to CSV button */
@media (min-width: 377px) {
    #csvButton {
        float: right;

        :disabled {
            pointer-events: none;
        }
    }
}

.edit-description-input-box {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

